--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -90,6 +90,24 @@
 				"showReuseMessage": true,
 				"clear": true
 			}
+		},
+		{
+			"type": "shell",
+			"command": "bun run translations",
+			"problemMatcher": [],
+			"label": "translations",
+			"detail": "Generate translations.",
+			"runOptions": {
+				"instanceLimit": 1
+			},
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": true
+			}
 		}
 	]
 }
