Add initial ARES SDK package and configuration
- Introduced a new package '@kvs/ares' for the ARES API SDK, including axios-based API functions and Zod validation schemas.
- Added environment variable configuration in .env.example for API endpoint.
- Updated package.json files to include dependencies and scripts for SDK generation and type checking.
- Enhanced the main application to utilize the new SDK for fetching economic subjects.
- Updated .gitignore to exclude local environment files.

--- a/apps/kvs/package.json
+++ b/apps/kvs/package.json
@@ -1,48 +1,49 @@
 {
-	"name": "@marek-hanzal/kvs",
-	"version": "0.5.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "run-s build:*",
-		"build:app": "dotenv -c development -- vite build",
-		"preview": "vite preview",
-		"typecheck": "tsc --noEmit"
-	},
-	"dependencies": {
-		"@tanstack/react-form": "^1.15.0",
-		"@tanstack/react-query": "^5.83.0",
-		"@tanstack/react-router": "^1.130.2",
-		"@tanstack/zod-adapter": "^1.130.2",
-		"@use-pico/client": "4.1.82",
-		"@use-pico/common": "4.1.82",
-		"@use-pico/server": "4.1.82",
-		"fuse.js": "7.1.0",
-		"kysely": "^0.28.3",
-		"react": "^19.1.1",
-		"react-dom": "19.1.1",
-		"sqlocal": "0.14.2",
-		"zod": "4.0.14"
-	},
-	"devDependencies": {
-		"@iconify/json": "2.2.364",
-		"@iconify/tailwind": "1.2.0",
-		"@modyfi/vite-plugin-yaml": "1.1.1",
-		"@tailwindcss/vite": "4.1.11",
-		"@tanstack/router-plugin": "1.130.8",
-		"@types/node": "^24.1.0",
-		"@types/react": "^19.1.9",
-		"@types/react-dom": "^19.1.7",
-		"@vitejs/plugin-react": "4.7.0",
-		"tailwindcss": "4.1.11",
-		"typescript": "^5.8.3",
-		"vite": "^7.0.6",
-		"vite-plugin-dynamic-import": "1.6.0",
-		"vite-plugin-top-level-await": "1.6.0",
-		"vite-plugin-wasm": "3.5.0",
-		"vite-tsconfig-paths": "^5.1.4"
-	},
-	"license": "MIT",
-	"packageManager": "bun@1.2.4",
-	"private": true
+  "name": "@marek-hanzal/kvs",
+  "version": "0.5.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "run-s build:*",
+    "build:app": "dotenv -c development -- vite build",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@kvs/ares": "0.5.0",
+    "@tanstack/react-form": "^1.15.0",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-router": "^1.130.2",
+    "@tanstack/zod-adapter": "^1.130.2",
+    "@use-pico/client": "4.1.82",
+    "@use-pico/common": "4.1.82",
+    "@use-pico/server": "4.1.82",
+    "fuse.js": "7.1.0",
+    "kysely": "^0.28.3",
+    "react": "^19.1.1",
+    "react-dom": "19.1.1",
+    "sqlocal": "0.14.2",
+    "zod": "4.0.14"
+  },
+  "devDependencies": {
+    "@iconify/json": "2.2.364",
+    "@iconify/tailwind": "1.2.0",
+    "@modyfi/vite-plugin-yaml": "1.1.1",
+    "@tailwindcss/vite": "4.1.11",
+    "@tanstack/router-plugin": "1.130.8",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "4.7.0",
+    "tailwindcss": "4.1.11",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.6",
+    "vite-plugin-dynamic-import": "1.6.0",
+    "vite-plugin-top-level-await": "1.6.0",
+    "vite-plugin-wasm": "3.5.0",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "license": "MIT",
+  "packageManager": "bun@1.2.4",
+  "private": true
 }
